--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 
     <script>
         var mymap = L.map('mapid').setView([35.8617, 104.1954], 4);
+        var greenIcon = new L.Icon({
+  iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-green.png',
+  shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
+  iconSize: [25, 41],
+  iconAnchor: [12, 41],
+  popupAnchor: [1, -34],
+  shadowSize: [41, 41]
+});
 
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors'
@@ -18,7 +26,7 @@
 
         L.marker([39.9042, 116.4074]).addTo(mymap)
             .bindPopup("<b>北京</b><br />").openPopup();
-        L.marker([31.2304, 121.4737]).addTo(mymap)
+        L.marker([31.2304, 121.4737], {icon: goldIcon}).addTo(mymap)
             .bindPopup("<b>上海</b><br />").openPopup();
         L.marker([23.1291, 113.2644]).addTo(mymap)
             .bindPopup("<b>广州</b><br />").openPopup();
