--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
         }).addTo(mymap);
 
         L.marker([39.9042, 116.4074]).addTo(mymap)
-            .bindPopup("<b>北京</b><br />").openPopup();
+            .bindPopup("<b>北京</b><br />");
         L.marker([31.2304, 121.4737], {icon: goldIcon}).addTo(mymap)
-            .bindPopup("<b>上海</b><br />").openPopup();
+            .bindPopup("<b>上海</b><br />");
         L.marker([23.1291, 113.2644]).addTo(mymap)
-            .bindPopup("<b>广州</b><br />").openPopup();
+            .bindPopup("<b>广州</b><br />");
         L.marker([34.8107, 117.3220]).addTo(mymap)
-            .bindPopup("<b>枣庄</b><br />").openPopup();
+            .bindPopup("<b>枣庄</b><br />");
         L.marker([30.5928, 114.3052]).addTo(mymap)
-            .bindPopup("<b>武汉</b><br />").openPopup();
+            .bindPopup("<b>武汉</b><br />");
         L.marker([32.0090, 112.1226]).addTo(mymap)
-            .bindPopup("<b>襄阳</b><br />").openPopup();
+            .bindPopup("<b>襄阳</b><br />");
         L.marker([36.6256, 114.5392]).addTo(mymap)
-            .bindPopup("<b>邯郸</b><br />").openPopup();
+            .bindPopup("<b>邯郸</b><br />");
         L.marker([38.3044, 116.8387]).addTo(mymap)
-            .bindPopup("<b>沧州</b><br />").openPopup();
+            .bindPopup("<b>沧州</b><br />");
         L.marker([31.8206, 117.2290]).addTo(mymap)
-            .bindPopup("<b>合肥</b><br />").openPopup();
+            .bindPopup("<b>合肥</b><br />");
         
     </script>
 </body>
