--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
   popupAnchor: [1, -34],
   shadowSize: [41, 41]
 });
+         var redIcon = new L.Icon({
+  iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png',
+  shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
+  iconSize: [25, 41],
+  iconAnchor: [12, 41],
+  popupAnchor: [1, -34],
+  shadowSize: [41, 41]
+});
 
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors'
@@ -42,6 +50,16 @@
             .bindPopup("<b>沧州</b><br />");
         L.marker([31.8206, 117.2290]).addTo(mymap)
             .bindPopup("<b>合肥</b><br />");
+        L.marker([30.5723, 104.0665]).addTo(mymap)
+            .bindPopup("<b>成都</b><br />");
+        L.marker([30.5723, 104.0665]).addTo(mymap)
+            .bindPopup("<b>成都</b><br />");
+        L.marker([26.0742, 119.2965], {icon: goldIcon}).addTo(mymap)
+            .bindPopup("<b>福州</b><br />");
+        L.marker([36.1958, 113.1165]).addTo(mymap)
+            .bindPopup("<b>长治</b><br />");
+        L.marker([34.7472, 113.6249]).addTo(mymap)
+            .bindPopup("<b>郑州</b><br />");
         
     </script>
 </body>
