--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             .bindPopup("<b>成都</b><br />");
         L.marker([30.5723, 104.0665]).addTo(mymap)
             .bindPopup("<b>成都</b><br />");
-        L.marker([26.0742, 119.2965], {icon: goldIcon}).addTo(mymap)
+        L.marker([26.0742, 119.2965], {icon: redIcon}).addTo(mymap)
             .bindPopup("<b>福州</b><br />");
         L.marker([36.1958, 113.1165]).addTo(mymap)
             .bindPopup("<b>长治</b><br />");
