--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
             .bindPopup("<b>长治</b><br />");
         L.marker([34.7472, 113.6249]).addTo(mymap)
             .bindPopup("<b>郑州</b><br />");
+        L.marker([30.2741, 120.1552]).addTo(mymap)
+            .bindPopup("<b>杭州</b><br />");
         
     </script>
 </body>
