--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
             .bindPopup("<b>郑州</b><br />");
         L.marker([30.2741, 120.1552]).addTo(mymap)
             .bindPopup("<b>杭州</b><br />");
+        L.marker([28.6820, 115.8579]).addTo(mymap)
+            .bindPopup("<b>南昌</b><br />");
+        L.marker([39.0851, 117.1994]).addTo(mymap)
+            .bindPopup("<b>天津</b><br />");
         
     </script>
 </body>
