--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
             .bindPopup("<b>南昌</b><br />");
         L.marker([39.0851, 117.1994]).addTo(mymap)
             .bindPopup("<b>天津</b><br />");
+        L.marker([41.8048, 123.4330], {icon: goldIcon}).addTo(mymap)
+            .bindPopup("<b>沈阳</b><br />");
         
     </script>
 </body>
