--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
             .bindPopup("<b>天津</b><br />");
         L.marker([41.8048, 123.4330], {icon: goldIcon}).addTo(mymap)
             .bindPopup("<b>沈阳</b><br />");
+        L.marker([40.6578, 109.8402]).addTo(mymap)
+            .bindPopup("<b>包头</b><br />");
         
     </script>
 </body>
