--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
             .bindPopup("<b>沈阳</b><br />");
         L.marker([40.6578, 109.8402]).addTo(mymap)
             .bindPopup("<b>包头</b><br />");
+        L.marker([32.0584, 118.7965]).addTo(mymap)
+            .bindPopup("<b>南京</b><br />");
         
     </script>
 </body>
