--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
             .bindPopup("<b>包头</b><br />");
         L.marker([32.0584, 118.7965]).addTo(mymap)
             .bindPopup("<b>南京</b><br />");
+        L.marker([27.9949, 120.6994]).addTo(mymap)
+            .bindPopup("<b>温州</b><br />");
         
     </script>
 </body>
