--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
             .bindPopup("<b>南京</b><br />");
         L.marker([27.9949, 120.6994]).addTo(mymap)
             .bindPopup("<b>温州</b><br />");
+        L.marker([45.7567, 126.6424]).addTo(mymap)
+            .bindPopup("<b>哈尔滨</b><br />");
         
     </script>
 </body>
