--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
             .bindPopup("<b>温州</b><br />");
         L.marker([45.7567, 126.6424]).addTo(mymap)
             .bindPopup("<b>哈尔滨</b><br />");
+        L.marker([31.4910, 120.3124]).addTo(mymap)
+            .bindPopup("<b>无锡</b><br />");
+        L.marker([29.5657, 106.5512]).addTo(mymap)
+            .bindPopup("<b>重庆</b><br />");
         
     </script>
 </body>
