--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         L.marker([39.9042, 116.4074]).addTo(mymap)
             .bindPopup("<b>北京</b><br />");
-        L.marker([31.2304, 121.4737], {icon: goldIcon}).addTo(mymap)
+        L.marker([31.2304, 121.4737]).addTo(mymap)
             .bindPopup("<b>上海</b><br />");
         L.marker([23.1291, 113.2644]).addTo(mymap)
             .bindPopup("<b>广州</b><br />");
@@ -80,6 +80,16 @@
             .bindPopup("<b>无锡</b><br />");
         L.marker([29.5657, 106.5512]).addTo(mymap)
             .bindPopup("<b>重庆</b><br />");
+        L.marker([37.4635,121.4480], {icon: goldIcon}).addTo(mymap)
+            .bindPopup("<b>烟台</b><br />");
+        L.marker([36.0662,120.3830]).addTo(mymap)
+            .bindPopup("<b>青岛</b><br />");
+        L.marker([36.8131,118.0548]).addTo(mymap)
+            .bindPopup("<b>淄博</b><br />");
+        L.marker([35.2156,35.2156]).addTo(mymap)
+            .bindPopup("<b>焦作</b><br />");
+        L.marker([25.8311,114.9348]).addTo(mymap)
+            .bindPopup("<b>赣州</b><br />");
         
     </script>
 </body>
