--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
             .bindPopup("<b>襄阳</b><br />");
         L.marker([36.6256, 114.5392]).addTo(mymap)
             .bindPopup("<b>邯郸</b><br />");
-        L.marker([38.3044, 116.8387]).addTo(mymap)
-            .bindPopup("<b>沧州</b><br />");
+        <!-- L.marker([38.3044, 116.8387]).addTo(mymap)
+            .bindPopup("<b>沧州</b><br />"); -->
         L.marker([31.8206, 117.2290]).addTo(mymap)
             .bindPopup("<b>合肥</b><br />");
         L.marker([30.5723, 104.0665]).addTo(mymap)
             .bindPopup("<b>成都</b><br />");
         L.marker([30.5723, 104.0665]).addTo(mymap)
             .bindPopup("<b>成都</b><br />");
-        L.marker([26.0742, 119.2965], {icon: redIcon}).addTo(mymap)
+        L.marker([26.0742, 119.2965], {icon: goldIcon}).addTo(mymap)
             .bindPopup("<b>福州</b><br />");
         L.marker([36.1958, 113.1165]).addTo(mymap)
             .bindPopup("<b>长治</b><br />");
@@ -84,12 +84,14 @@
             .bindPopup("<b>烟台</b><br />");
         L.marker([36.0662,120.3830]).addTo(mymap)
             .bindPopup("<b>青岛</b><br />");
-        L.marker([36.8131,118.0548]).addTo(mymap)
-            .bindPopup("<b>淄博</b><br />");
+        L.marker([35.2336,115.4811]).addTo(mymap)
+            .bindPopup("<b>菏泽</b><br />");
         L.marker([35.2156,35.2156]).addTo(mymap)
             .bindPopup("<b>焦作</b><br />");
         L.marker([25.8311,114.9348]).addTo(mymap)
             .bindPopup("<b>赣州</b><br />");
+        L.marker([38.0428,114.5143]).addTo(mymap)
+            .bindPopup("<b>石家庄</b><br />");
         
     </script>
 </body>
