--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           L.marker([lat, lng]).addTo(mymap).bindPopup(city);
           markerCount++;
 	  const myElement = document.getElementById('marker');
-	  myElement.textContent = `Number of Markers: ${markerCount}`;
+	  myElement.textContent = `Number of Toys: ${markerCount}`;
         }   
 
 
