--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
         
 
 	addMarker(39.9042, 116.4074, "<b>北京</b><br />")
-        L.marker([31.2304, 121.4737]).addTo(mymap)
-            .bindPopup("<b>上海</b><br />");
-        L.marker([23.1291, 113.2644]).addTo(mymap)
-            .bindPopup("<b>广州</b><br />");
+	addMarker(31.2304, 121.4737, "<b>上海</b><br />")
+        addMarker(23.1291, 113.2644, "<b>广州</b><br />")
+      
         L.marker([34.8107, 117.3220]).addTo(mymap)
             .bindPopup("<b>枣庄</b><br />");
         L.marker([30.5928, 114.3052]).addTo(mymap)
