--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 	addMarker(34.8107, 117.3220, "<b>枣庄</b><br />")
         addMarker(30.5928, 114.3052, "<b>武汉</b><br />")
 	addMarker(30.1995, 115.0389, "<b>黄石</b><br />")
+	addMarker(30.3348, 112.2407, "<b>荆州</b><br />")
 	addMarker(32.0090, 112.1226, "<b>襄阳</b><br />")
         addMarker(36.6256, 114.5392, "<b>邯郸</b><br />")
 	addMarker(31.8206, 117.2290, "<b>合肥</b><br />")
